--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "author": "Joe Turner <jturner@thinkful.com>",
   "license": "MIT",
   "dependencies": {
-    "bcrypt": "^3.0.3",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.4",
     "dotenv": "^6.2.0",
     "express": "^4.16.3",
